--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-project",
+  "name": "foodponi-nextjs",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.1.3",
+    "antd": "^5.15.2",
+    "next": "^12.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
