--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.2",
     "antd": "^5.15.2",
+    "axios": "^1.6.8",
+    "cookies-next": "^4.1.1",
+    "jwt-decode": "^4.0.0",
     "next": "^12.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
