--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.15.2",
     "axios": "^1.6.8",
     "cookies-next": "^4.1.1",
+    "date-fns": "^3.6.0",
     "jwt-decode": "^4.0.0",
     "next": "^12.3.4",
     "react": "18.2.0",
