--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cookies-next": "^4.1.1",
     "date-fns": "^3.6.0",
     "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
     "next": "^12.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
