--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.2",
+    "@tanstack/react-query": "^5.32.0",
     "antd": "^5.15.2",
     "axios": "^1.6.8",
     "cookies-next": "^4.1.1",
