--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.2",
-    "@tanstack/react-query": "^5.32.0",
     "antd": "^5.15.2",
     "axios": "^1.6.8",
     "cookies-next": "^4.1.1",
@@ -29,8 +28,11 @@
     "@types/node": "20.11.26",
     "@types/react": "18.2.65",
     "@types/react-dom": "18.2.21",
+    "autoprefixer": "^10.4.19",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.3",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "typescript": "5.4.2"
   }
 }
