--- a/package.json
+++ b/package.json
@@ -11,23 +11,29 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.2",
+    "@stomp/stompjs": "^7.0.0",
+    "@types/nprogress": "^0.2.3",
     "antd": "^5.15.2",
-    "axios": "^1.6.8",
+    "axios": "^1.7.2",
     "cookies-next": "^4.1.1",
     "date-fns": "^3.6.0",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "next": "^12.3.4",
+    "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.0",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "sockjs-client": "^1.6.1",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@types/node": "20.11.26",
     "@types/react": "18.2.65",
     "@types/react-dom": "18.2.21",
+    "@types/sockjs-client": "^1.5.4",
     "autoprefixer": "^10.4.19",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.3",
