--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/cssinjs": "^1.21.0",
     "@reduxjs/toolkit": "^2.2.2",
     "@stomp/stompjs": "^7.0.0",
     "@types/nprogress": "^0.2.3",
