--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-fast-marquee": "^1.6.5",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
