--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
     "sockjs-client": "^1.6.1",
+    "tailwind-scrollbar": "^3.1.0",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
