--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/nprogress": "^0.2.3",
     "antd": "^5.19.1",
     "axios": "^1.7.2",
+    "clsx": "^2.1.1",
     "cookies-next": "^4.1.1",
     "date-fns": "^3.6.0",
     "jwt-decode": "^3.1.2",
