--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.6.5",
     "react-redux": "^9.1.0",
+    "react-transition-group": "^4.4.5",
     "redux": "^5.0.1",
     "sockjs-client": "^1.6.1",
     "tailwind-scrollbar": "^3.1.0",
@@ -36,6 +37,7 @@
     "@types/node": "20.11.26",
     "@types/react": "18.2.65",
     "@types/react-dom": "18.2.21",
+    "@types/react-transition-group": "^4.4.10",
     "@types/sockjs-client": "^1.5.4",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
