--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "cookies-next": "^4.1.1",
     "date-fns": "^3.6.0",
+    "gsap": "^3.12.5",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "next": "^12.3.4",
@@ -34,14 +35,14 @@
     "yarn": "^1.22.22"
   },
   "devDependencies": {
-    "@types/node": "20.11.26",
-    "@types/react": "18.2.65",
+    "@types/node": "^20.11.26",
+    "@types/react": "^18.2.65",
     "@types/react-dom": "18.2.21",
     "@types/react-transition-group": "^4.4.10",
     "@types/sockjs-client": "^1.5.4",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
-    "typescript": "5.4.2"
+    "typescript": "^5.4.2"
   }
 }
