--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@stomp/stompjs": "^7.0.0",
     "@types/nprogress": "^0.2.3",
     "antd": "^5.19.1",
+    "antd-img-crop": "^4.22.0",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "cookies-next": "^4.1.1",
