--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "antd-img-crop": "^4.22.0",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
+    "connected-react-router": "^6.9.3",
     "date-fns": "^3.6.0",
     "gsap": "^3.12.5",
     "js-cookie": "^3.0.5",
