--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
     "pretier": "^0.0.1",
+    "prettier": "^3.3.3",
     "qs": "6.10.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
