--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "antd-img-crop": "^4.22.0",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
-    "connected-react-router": "^6.9.3",
     "date-fns": "^3.6.0",
     "gsap": "^3.12.5",
     "js-cookie": "^3.0.5",
@@ -28,7 +27,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-inlinesvg": "4.1.0",
     "react-redux": "^9.1.0",
-    "react-router-dom": "6.3.0",
+    "react-router-dom": "^6.22.3",
     "react-topbar-progress-indicator": "4.1.1",
     "react-transition-group": "^4.4.5",
     "redux": "^5.0.1",
