Nâng cấp: Viết core admin - Product Table

--- a/package.json
+++ b/package.json
@@ -54,15 +54,15 @@
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react-swc": "^3.7.0",
     "autoprefixer": "^10.4.19",
-    "css-loader": "6.7.1",
+    "css-loader": "6.x.x",
     "del": "7.0.0",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "mini-css-extract-plugin": "2.6.1",
+    "mini-css-extract-plugin": "2.x.x",
     "postcss": "^8.4.38",
     "sass": "1.55.0",
-    "sass-loader": "13.2.0",
+    "sass-loader": "13.x.x",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.2",
     "vite": "^5.4.7"
