--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "check": "tsc --noEmit"
   },
   "dependencies": {
+    "@ant-design/charts": "^2.2.3",
     "@reduxjs/toolkit": "^2.2.2",
     "@stomp/stompjs": "^7.0.0",
     "antd": "^5.19.1",
@@ -25,6 +26,7 @@
     "prettier": "^3.3.3",
     "qs": "6.10.3",
     "react": "18.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.6.5",
     "react-inlinesvg": "4.1.0",
