--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "gsap": "^3.12.5",
+    "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.2",
     "jwt-decode": "^3.1.2",
     "prettier": "^3.3.3",
     "qs": "6.10.3",
@@ -40,7 +42,6 @@
     "yarn": "^1.22.22"
   },
   "devDependencies": {
-    "@types/bootstrap": "5.1.10",
     "@types/chart.js": "2.9.37",
     "@types/jest": "29.5.2",
     "@types/js-cookie": "^3.0.6",
