--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,7 +30,7 @@ jobs:
       run: yarn install --frozen-lockfile
 
     - name: Build project
-      run: yarn build --if-present
+      run: yarn build
 
     - name: Run tests
       run: yarn test
