--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,3 +31,29 @@ jobs:
 
     - name: Build project
       run: yarn build
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Build Docker image
+      run: |
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/foodponi:${{ github.sha }} .
+        docker tag ${{ secrets.DOCKER_USERNAME }}/foodponi:${{ github.sha }} ${{ secrets.DOCKER_USERNAME }}/foodponi:latest
+
+    - name: Push Docker image to Docker Hub 
+      run: |
+        docker push ${{ secrets.DOCKER_USERNAME }}/foodponi:${{ github.sha }}
+        docker push ${{ secrets.DOCKER_USERNAME }}/foodponi:latest
+        
+    - name: SSH into server and clean old images and containers
+      uses: appleboy/ssh-action@v0.1.6
+      with:
+        host: ${{ secrets.SERVER_HOST }}
+        username: ${{ secrets.SERVER_USERNAME }}
+        password: ${{ secrets.SSH_PASSWORD }}
+        port: ${{ secrets.SERVER_PORT}}
+        script: |
+        
+          docker pull ${{ secrets.DOCKER_USERNAME }}/foodponi:latest && docker run -d --name foodponi -p 80:80 ${{ secrets.DOCKER_USERNAME }}/foodponi:latest
